# ThaiTravel

./: .env.prod.template  .env.test  .gitignore  README.md  database.db  pyproject.toml
scripts/: run-dev  seed_data
tests/: conftest.py  test_activity.py  test_hello.py  test_location.py  test_tax.py  test_user.py
ttt/: main.py
ttt/core/: config.py  deps.py  security.py
ttt/models/: __init__.py  model_activity.py  model_location.py  model_user.py
ttt/models/data/: province_data.py  seed_province_data.py
ttt/routers/: __init__.py  authentication_router.py  route_activity.py  route_location.py  route_tax.py  route_user.py
ttt/schemas/: schema_activity.py  schema_location.py  schema_user.py
