[project]
name = "ttt"
version = "0.1.0"
description = ""
authors = [
    {name = "NaphatJM",email = "naphatjm.work@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.116.0,<0.117.0)",
    "fastapi-cli (>=0.0.8,<0.0.9)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
